# Ylab_FastApi

./: docker-compose.yaml  manage.py  pyproject.toml
core/: database.py
menu/: forms.py  handlers.py  models.py  test.txt
menu/routers/: dish.py  menu.py  submenu.py
menu/utils/: database.py
migrations/: env.py
migrations/versions/: 02bb9d079758_add_model_menu.py  25eea067d956_first.py  d8e3b5373eaa_first.py
